# SST-HRMS-Haskell-API

./: .travis.yml  CHANGELOG.md  Dockerfile  Procfile  README.md  heroku.yml  sst-hrms-haskell-api.cabal  stack.yaml
app/: Main.hs
scripts/: install.sh  lint.sh  test.sh
src/: Prelude.hs  SstHrmsHaskellApi.hs
src/Api/: HealthCheck.hs
